# prodigy-workspace

./: .coveragerc  .gitignore  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  requirements-dev.txt  requirements.txt
apps/api/: .coverage  .env.example  Dockerfile  Dockerfile.prod  Dockerfile.worker  alembic.ini  coverage.xml  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_phase1_schema.py  0002_phase2_comps_schema.py  0003_boe_test_display_fields.py  0004_gate_state_and_audit_fields.py  0005_deal_gate_status.py  0006_gate_overrides_and_events.py  0007_deal_outcomes.py  0008_workspace_edition.py  0009_deal_comments.py  0010_workspace_member_viewer_role.py
apps/api/app/: main.py
apps/api/app/api/: auth.py  boe.py  comps.py  deals.py  deps.py  full_underwriting.py  portfolio.py  risk.py  router.py  workspaces.py
apps/api/app/boe/: __init__.py  engine.py  parity.py
apps/api/prodigy_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/scripts/: run_boe_parity.py
apps/api/tests/: test_activity_feed_contract.py  test_analytics_payloads.py  test_audit_logging.py  test_boe_engine.py  test_boe_gate_status_persistence.py  test_boe_parity.py  test_boe_stub.py  test_comps_service.py  test_db_schema_contract.py  test_deal_workspace_summary_contract.py  test_deals_api_unit.py  test_gate_override.py  test_gate_summary_contract.py  test_gating_state_machine.py  test_ic_packet.py  test_ic_score.py  test_rbac_deal_controls.py  test_underwriting_router_contract.py  test_workspace_edition_switch.py
apps/web/: Dockerfile  (+5 more)
(+82 files in other folders)
